[package]
name = "frecenfile"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Compute frecency scores for files in a Git repository"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
git2 = "0.20.1"
hex = "0.4.3"
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sled = "0.34.7"

